Fix overflow

--- a/src/components/Input.module.css
+++ b/src/components/Input.module.css
@@ -8,6 +8,7 @@
   border: 4px solid black;
   box-shadow: inset 6px 6px rgba(127, 49, 10, 0.4);
   margin-top: calc(80px - var(--flex-gap-size));
+  width: 80%;
 }
 
 .url_input:focus {
